# Rosehip-repl

./: LICENSE  README.md  pyproject.toml  requirements.txt
apps/programming/: README.md
apps/programming/html/: __init__.py
apps/programming/javascript/: __init__.py
apps/programming/python/: __init__.py
apps/tools/background color/: __init__.py
apps/tools/background image/: __init__.py
apps/tools/calculator/: __init__.py
apps/tools/clock/: __init__.py
apps/tools/music/: __init__.py
apps/tools/shut down/: __init__.py
apps/tools/video/: README.md  __init__.py
apps/util/animation/: __init__.py
apps/util/animation/frames/: README.md
apps/util/maze/: README.md  __init__.py
apps/util/pong/: README.md  __init__.py
apps/util/speaker/: README.md  __init__.py
apps/util/web-browser/: README.md
images/: README.md
musics/: README.md
