[tool.poetry]
name = "rosehip-demo"
version = "1.0.0"
description = "Online implementation of Rosehip"
authors = ["Elisha Hollander <just4now666666@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
markdown2 = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
